Assignment1: Visualisation (7PAM2000 Applied Data Science 1)

--- a/Assignment1_Weather_Data_Visualization.ipynb
+++ b/Assignment1_Weather_Data_Visualization.ipynb
@@ -115,7 +115,7 @@
         "  plt.bar(weather_type,air_index,label='Air Index')\n",
         "  plt.bar(weather_type,humidity,label='humidity')\n",
         "  plt.xlabel('Weather Type')\n",
-        "  plt.ylabel('Air Index')\n",
+        "  plt.ylabel('Air Index and Humidity')\n",
         "  plt.legend()\n",
         "  plt.title('Weather Parameters Comparsion')\n",
         "  plt.show()\n"
@@ -146,7 +146,7 @@
         "  plt.scatter(weather_type,air_index,label='Air Index')\n",
         "  plt.scatter(weather_type,humidity,label='humidity')\n",
         "  plt.xlabel('Weather Type')\n",
-        "  plt.ylabel('Air Index')\n",
+        "  plt.ylabel('Air Index and Humidity')\n",
         "  plt.legend()\n",
         "  plt.title('Weather Parameters Comparsion')\n",
         "  plt.show()\n"
@@ -161,11 +161,11 @@
       "cell_type": "code",
       "source": [
         "weather=readdata('./weatherdata.csv') #passing path of CSV to readdata function to read CSV file\n",
-        "visualize_head(weather)  \n",
-        "parameter_info(weather)\n",
-        "line_plot(weather)\n",
-        "bar_plot(weather) \n",
-        "scatter_plot(weather)  "
+        "visualize_head(weather)  # Calling Function for Showing head of data (First 5 rows) \n",
+        "parameter_info(weather)  # calling function to see columns(Features) of Dataset\n",
+        "line_plot(weather)       # Calling For Line Plot using pyplot\n",
+        "bar_plot(weather)        # Calling For Bar Plot using pyplot\n",
+        "scatter_plot(weather)    # Calling For Scatter Plot using pyplot"
       ],
       "metadata": {
         "colab": {
@@ -173,9 +173,9 @@
           "height": 1000
         },
         "id": "rm14pBLF_DWb",
-        "outputId": "77f12dd3-1708-471e-c387-0a1b511a5961"
+        "outputId": "aa71874f-0ca9-427c-c751-c9ea138dc512"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
